	Reset selected files in the commit dialog asks to delete new files.
	Author images are only cached for 5 days now
	Added start page
	Added 'force' option to checkout revision and checkout branch
	Added 'rebase' to context menu in revision grid
	Added 'unstage chunk of file' option to commit dialog
	Added drop down menu to the 'open' button in the browse dialog

Version 1.92
	Fixed bug: the application hangs randomly
	Fixed bug: quotes in local settings were not escaped properly
	Fixed progress bar when pulling and fetching under git > 1.7.1
	There is a new installer to address the following issues (thanks to Jacob Stanley)
		Updating existing installations
		Install both 32bits and 64bits shell extension on 64bit systems
	Added icons to indicate if a files is added, modified or removed
	Author images from gravatar.com added to commit info panel
	User Manual updated
	Added quicksearch on author and message in revision grid
	Added commitinfo panel to blame view

Version 1.91
	Fixed bug: tooltips drawn incorrect

Version 1.90
	Fixed bug: images in .gif and .ico format could not be displayed.
	Fixed bug: extra empty lines are shown in the blame view.
	The application icon can be changed
	Added extra diff highlighting for single line changes
	Added asynchronous loading of files for diffs and general viewing to improve responsiveness
	Added "Show relative date" option to context menu of revision grid
	Copy from diff viewer copies code without '+', '-' or ' ' markings
	Added "Open with difftool" option to diff view in browse dialog
	Added tooltip to show long filenames in commit dialog 
	Added tooltip to show long filenames in diff view of browse

Version 1.89
	Fixed bug: Changes of an unstaged file are not shown when the file path contains spaces
	Fixed bug: Filehistory not working when opened from Visual Studio because filename is too long
	Fixed bug: Copy selected text from file viewer now copies the complete selected text